--- a/roles/swift_storage/templates/container-server.conf.j2
+++ b/roles/swift_storage/templates/container-server.conf.j2
@@ -1,11 +1,11 @@
 [DEFAULT]
-devices = /srv/1/node
+devices = /srv/node
 mount_check = false
 disable_fallocate = true
-bind_ip = 127.0.0.1
+bind_ip = {{ iface }}
 bind_port = 6011
 workers = 1
-user = <your-user-name>
+user = {{ username }}
 log_facility = LOG_LOCAL2
 recon_cache_path = /var/cache/swift
 eventlet_debug = true
